# agent-os

./: .gitignore  EXECUTION.md  README.md  ROADMAP.md  pyproject.toml
adapters/governance/mock/: README.md
adapters/memory/mock/: README.md
adapters/runtime/mock/: README.md
agent-os/: README.md
agent-os/capabilities/: registry.yaml
agent-os/contracts/: action-taxonomy.md  memory.md
agent-os/identity/: SOUL.md
agent-os/specs/: clawbot.agent.yaml
agent-os/tests/fixtures/: README.md
agent-os/tests/phase1/: README.md
capabilities/: registry.yaml
constitution/: v0.4.0.md
contracts/: action-taxonomy.md  governance.md  lifecycle.md  memory.md  observability.md  runtime.md
identity/: USER.md
schema/: agent.schema.yaml
scripts/: export_project_files.sh  migrate_journal.py
specs/: clawbot.agent.yaml  clawbot.sandbox.agent.yaml
src/agent_os/: __init__.py  chassis.py  cli.py  journal.py
src/agent_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agent_os/adapters/: interfaces.py
src/agent_os/capabilities/: commands.py  (+4 more)
tests/: test_capability_cli.py  test_capability_loader.py  test_capability_validator.py  test_journal_partitioning.py
tests/phase1/: test_acceptance.py  test_memory_laws.py
tests/phase2a/: test_openclaw_sandbox.py
tests/phase2b/: test_runtime_contract.py
tests/phase2c/: test_journal.py
tests/phase3a/: test_run_command.py
tests/phase3b/: test_introspection.py
tests/phase3c/: test_replay.py
tests/phase4a/: test_filtered_runs.py
tests/phase4b/: test_shortcuts.py
tests/phase4c/: test_failure_summary.py
(+18 files in other folders)
